# arm_kinematics_calibration

./: README.md  ROS2_MIGRATION.md
arm_calib_commands/: CMakeLists.txt  package.xml
arm_calib_commands/script/: 01_calib_classes.py  02_direct_measurement_calib.py  03_tcp_and_base_calib.py  04_laser_distance_calib.py  05_pose_path_compensation.py  06_jacobian_picking.py  07_ground_truth_scara_deep_dive.py  08_real_scara_calibration.py  CMakeLists.txt  calib_registry.py  generate_exception_test_cases.py  test_calib_all_types.py  traj_plot.py  traj_segment_example.py
arm_calib_commands/src/intp/: module_calib_command.cpp
arm_calib_commands/test/: test_bindings.py  test_calib_classes.cpp
arm_calib_kinematics/: CMakeLists.txt  package.xml
arm_calib_kinematics/include/arm_calib_kinematics/: base_calib.hpp  scara_calib.hpp  serialarm_calib.hpp  singleaxis_calib.hpp  sixaxis_calib.hpp  ujnt_calib.hpp  xyz_calib.hpp  xyzur_calib.hpp
arm_calib_kinematics/src/: base_calib.cpp  scara_calib.cpp  serialarm_calib.cpp  singleaxis_calib.cpp  sixaxis_calib.cpp  ujnt_calib.cpp  xyz_calib.cpp  xyzur_calib.cpp
arm_calib_kinematics/test/: test_calibration.cpp
robnux_utilities/: CMakeLists.txt  package.xml
robnux_utilities/include/robnux_utilities/: decent_alg.hpp  loadtxt.hpp  utility.hpp
robnux_utilities/src/: decent_alg.cpp  utility.cpp
robnux_utilities/test/: test_utilities.cpp
