<?xml version="1.0"?>
<package format="3">
    <name>rob_commands</name>
    <version>0.0.1</version>
    <description>robot command python binding package</description>

    <maintainer email="leon@robnux.net">Leon Liu, ROBNUX LLC</maintainer>

    <license>proprietary</license>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <buildtool_depend>ament_cmake_python</buildtool_depend>
    <buildtool_depend>pybind11_cmake</buildtool_depend>
    
    <build_depend>sensor_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>dsl_intp</build_depend>
    <build_depend>scurve_lib</build_depend>
    <build_depend>Eigen3</build_depend>
    <build_depend>pybind11</build_depend>
    <build_depend>python3-dev</build_depend>
    
    <exec_depend>sensor_msgs</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>dsl_intp</exec_depend>
    <exec_depend>scurve_lib</exec_depend>
    
    <export>
    </export>
</package>
    
